--- a/src/style.scss
+++ b/src/style.scss
@@ -856,13 +856,59 @@ body {
     }
     .web-img {
         overflow: hidden;
+        position: relative;
+        .github{
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            width: 40px;
+            height: 40px;
+            z-index: 30;
+            background: #fff;
+            border-radius: 50%;
+            box-shadow: 0 0 10px #ccc;
+            @media screen and (max-width: $ipad) {
+                display: none;
+            }
+        }
         img {
             width: 100%;
             height: 200px;
             object-fit: cover;
+            transition: all 0.5s;
+            &:hover{
+                transform: scale(1.1);
+            }
             //手機
             @media screen and (max-width: $phone) {
                 width: 90%;
+                &:hover{
+                    transform: scale(1);
+                }
+            }
+        }
+        .skill{
+            position: absolute;
+            bottom: 5%;
+            width: 96%;
+            left: 2%;
+            text-align: left;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            @media screen and (max-width: $phone) {
+                width: 86%;
+                left: 7%;
+                
+            }
+            span{
+                background: rgba(#000,0.7);
+                padding: 2px 10px;
+                color: #fff;
+                border-radius: 10px;
+                letter-spacing:1px;
+                font-size: 14px;
+
             }
         }
     }
